--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 			</section>
 			<section>
 			<section>
+			<h2>
+			Ceasarcijfer
+			</h2>
 			<table id="Caesartable">
 					<tr id="toprow">
 					<td class="caesarCell">a</td>
@@ -247,7 +250,7 @@
 					<img src="https://d3nevzfk7ii3be.cloudfront.net/igi/F44MNWP6Uh5WmSZs.large" class="stretch" />
 				</section>
 			</section>
-			<section data-markdown>
+			<!--<section data-markdown>
 				<textarea data-template>
 						## Page title
 
@@ -257,11 +260,11 @@
 			<section data-markdown>
 				<script type="text/template">
 					- Item 1
-					<!-- .element: class="fragment" data-fragment-index="2" -->
+					.element: class="fragment" data-fragment-index="2" 
 					- Item 2
-					<!-- .element: class="fragment" data-fragment-index="1" -->
+					.element: class="fragment" data-fragment-index="1" 
 				</script>
-			</section>
+			</section>-->
 
 		</div>
 	</div>
