--- a/index.html
+++ b/index.html
@@ -251,12 +251,11 @@
 				</section>
 			</section>
 			
-			<section data-markdown>
-				<textarea data-template>
-						## De kracht Neurale crytografie
+			<section>
+				<h2>De kracht Neurale crytografie</h2>
 
 						
-					</textarea>
+				
 			</section>
 			<!--
 			<section data-markdown>
