--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 			</section>
 			
 			<section>
-				<h2>De kracht Neurale crytografie</h2>
+				<h2>De kracht van Neurale crytografie</h2>
 
 						
 				
