--- a/index.html
+++ b/index.html
@@ -250,20 +250,23 @@
 					<img src="https://d3nevzfk7ii3be.cloudfront.net/igi/F44MNWP6Uh5WmSZs.large" class="stretch" />
 				</section>
 			</section>
-			
+
 			<section>
 				<h2>De kracht van Neurale crytografie</h2>
 
-						
+
+
+			</section>
+			<section>
 				
 			</section>
 			<!--
 			<section data-markdown>
 				<script type="text/template">
 					- Item 1
-					.element: class="fragment" data-fragment-index="2" 
+					.element: class="fragment" data-fragment-index="2"
 					- Item 2
-					.element: class="fragment" data-fragment-index="1" 
+					.element: class="fragment" data-fragment-index="1"
 				</script>
 			</section>-->
 
