--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<section>
 				Caesarcijfer<br>
 
-				<input type="text" placeholder="" class="Caesarcijfer">
+				<input type="text" class="Caesarcijfer">
 				<div class="slidecontainer">
 					<input type="range" min="0" max="25" value="0" class="slider" id="Range1">
 				</div>
@@ -121,7 +121,7 @@
 			</section>
 			<section>
 				Caesarcijfer ontcijferen<br>
-				<input type="text" placeholder="Encoded text" class="Caesarontcijfer">
+				<input type="text" class="Caesarontcijfer">
 				<div class="slidecontainer">
 					<input type="range" min="0" max="25" value="0" class="slider" id="Range2">
 				</div>
