--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@
 			</section>
 			<section>
 				<h2>Neurale encryptie</h2>
-				<img src="img/autoencoder blokjes.png" class="stretch" />
+				<!-- <img src="img/autoencoder blokjes.png" class="stretch" /> -->
+				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg" class="stretch fragment"/>
+				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg" style="transform: scaleX(-1)" class="stretch fragment"/>
 			</section>
 			</section>
 			<section>
@@ -254,7 +256,7 @@
 
 			</section>
 			<section>
-				
+
 			</section>
 			<!--
 			<section data-markdown>
