--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 			<section>
 				<h2>Neurale encryptie</h2>
 				<!-- <img src="img/autoencoder blokjes.png" class="stretch" /> -->
-				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg" class="stretch fragment"/>
-				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg" style="transform: scaleX(-1)" class="stretch fragment"/>
+				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg" class="fragment"/>
+				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg" style="transform: scaleX(-1)" class="fragment"/>
 			</section>
 			</section>
 			<section>
