--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						<img class="fragment fade-up" src="img/AI_network.png" style="width: 48%;background: white;">
 				</section>
 				<section>
-						<video class="stretch" muted controls>
+						<video id="AI_training" class="stretch" muted loop controls>
 							<source src="img/AI_training.mp4" type="video/mp4">
 						</video>
 				</section>
