--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 			</section>
 			<section>
 				<section>
-					<h2> AI </h2>
+					<h2> Kunstmatige Intelligentie </h2>
 						<img data-autoslide="500" class="fragment fade-up" src="img/AI_headline_1.png" >
 						<img class="fragment fade-up" src="img/AI_headline_2.png" >
 				</section>
@@ -177,7 +177,7 @@
 			</section>
 			<section>
 				<section >
-					<h2> AI </h2>
+					<h2> Kunstmatige Intelligentie </h2>
 						<img data-autoslide="500" class="fragment fade-up" style="width: 48%;" src="https://kimschmidtsbrain.files.wordpress.com/2015/10/googlesemanticsearchdeeplearning-300x278.jpg" >
 						<img class="fragment fade-up" src="img/AI_network.png" style="width: 48%;background: white;">
 				</section>
