--- a/index.html
+++ b/index.html
@@ -223,18 +223,18 @@
 			</section>
 			<section>
 			<section>
-				<h2>Neurale encryptie</h2>
+				<h2>Neurale encryptie: het onderzoek</h2>
 					<span class="fragment" data-fragment-index="1">Profielwerkstuk</span><br />
 					<span class="fragment " data-fragment-index="2" aria-hidden="true">&darr;</span><span aria-hidden="true" class="fragment " data-fragment-index="3">&uarr;</span><br />
 					<span class="fragment"  data-fragment-index="2">29945489ec5b0675278bf05516b6f77b</span><br />
 
 			</section>
 			<section>
-				<h2>Neurale encryptie</h2>
+				<h2>Neurale encryptie: het onderzoek</h2>
 				<img src="img/autoencoder_schema.jpg" class="stretch" />
 			</section>
 			<section>
-				<h2>Neurale encryptie</h2>
+				<h2>Neurale encryptie: het onderzoek</h2>
 				<!-- <img src="img/autoencoder blokjes.png" class="stretch" /> -->
 				<div style="display: flex;">
 					<div >
