--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 				<!-- <img src="img/autoencoder blokjes.png" class="stretch" /> -->
 				<div style="display: flex;">
 					<div >
-				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg" class="fragment" style="width: 100%; border: none; margin: 0px; "/>
+				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg"  style="width: 100%; border: none; margin: 0px; "/>
 			</div><div>
 				<img src="https://i.ytimg.com/vi/aircAruvnKk/maxresdefault.jpg" style="width: 100%; border: none; margin: 0px; transform: scaleX(-1)" class="fragment"/>
 			</div>
