--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 			</section>
 
 			<section>
-				<h2>De kracht van Neurale crytografie</h2>
+				<h2>De kracht van Neurale cryptografie</h2>
 
 
 
