--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 			</section>
 
 			<section>
-				<h2>De kracht van Neurale cryptografie</h2>
+				<h2>De kracht van neurale cryptografie</h2>
 
 
 
